--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Jane Doe</h1>
-							<p>Hyperspace Engineer</p>
+							<h1 id="title">Francis Enagnon Oussou</h1>
+							<p>Ph.D Fellow</p>
 						</div>
 
 					<!-- Nav -->
@@ -41,9 +41,9 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://twitter.com/" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://github.com/OussouCode/oussoucode.github.io" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
@@ -81,10 +81,10 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p>My research focuses on Water Resources assessment through Remote Sensing, GIS and Hydrogeophysics
+							for borehole implantation improvement, urban and rural drinking water supply and Aquifers monitoring.
+							As team leader in many field works, I actively participate to a national topographic map update and provide 
+							my expertise as freelancer and lecturer assistant delivering courses in GIS, Cartography and Remote Sensing.</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
