--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
+								<h2 class="alt">Hi! I'm <strong>Francis</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
 								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
+								<p>My next target is to be part of a team working on land resources monitoring through satellite images 
+									processing and field geophysical measurements for real time alerts mapping and risk reports.<br />
 								vitae natoque dictum sollicitudin elementum.</p>
 							</header>
 
